--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@sanity/vision": "^3.97.1",
     "@types/three": "^0.178.0",
     "@vercel/blob": "^1.1.1",
+    "@wavesurfer/react": "^1.0.11",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -57,6 +58,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
+    "next-sanity": "^9.12.0",
     "next-themes": "^0.4.6",
     "plyr": "^3.7.8",
     "prisma": "^6.11.1",
@@ -76,6 +78,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
+    "@types/howler": "^2.2.12",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
