--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.97.1",
     "@types/three": "^0.178.0",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^1.1.1",
     "@wavesurfer/react": "^1.0.11",
     "bcrypt": "^6.0.0",
