--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
     "react-resizable-panels": "^3.0.3",
+    "react-simple-maps": "^3.0.0",
     "recharts": "^3.0.2",
     "sanity": "^3.97.1",
     "sonner": "^2.0.6",
