--- a/package.json
+++ b/package.json
@@ -67,11 +67,13 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
+    "react-is": "^19.1.0",
     "react-resizable-panels": "^3.0.3",
     "react-simple-maps": "^3.0.0",
     "recharts": "^3.0.2",
     "sanity": "^3.97.1",
     "sonner": "^2.0.6",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "three": "^0.178.0",
     "vaul": "^1.1.2",
