fix: sanity webhook

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@sanity/client": "^7.6.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.97.1",
+    "@sanity/webhook": "^4.0.4",
     "@types/three": "^0.178.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^1.1.1",
@@ -78,7 +79,7 @@
     "react-hook-form": "^7.59.0",
     "react-is": "^19.1.0",
     "react-resizable-panels": "^3.0.3",
-    "react-simple-maps": "^3.0.0",
+    "react-simple-maps": "^4.0.0-beta.6",
     "recharts": "^3.0.2",
     "sanity": "^3.97.1",
     "sonner": "^2.0.6",
