--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -30,10 +30,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install ESLint
-        run: |
-          npm install eslint@8.10.0
-          npm install @microsoft/eslint-formatter-sarif@3.1.0
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Install ESLint SARIF formatter
+        run: npm install --save-dev @microsoft/eslint-formatter-sarif@3.1.0
 
       - name: Run ESLint
         env:
