--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
+    "type-check": "tsc --noEmit",
     "postinstall": "prisma generate",
     "sync": "node scripts/sync-cli.js",
     "sync:status": "node scripts/sync-cli.js status",
