--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,9 @@ next-env.d.ts
 
 # Sentry Config File
 .env.sentry-build-plugin
+
+# Test artifacts
+coverage/
+test-results/
+playwright-report/
+playwright/.cache/
