--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:all": "npm run test && npm run test:e2e",
     "postinstall": "prisma generate",
     "sync": "node scripts/sync-cli.js",
     "sync:status": "node scripts/sync-cli.js status",
@@ -109,20 +116,31 @@
     "prismjs": "1.30.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.27.1",
+    "@playwright/test": "^1.53.2",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/bcrypt": "^5.0.2",
     "@types/howler": "^2.2.12",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20",
+    "@types/node": "^20.19.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-simple-maps": "^3.0.6",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
     "@typescript-eslint/parser": "^8.36.0",
     "dotenv-cli": "^8.0.0",
     "eslint": "^9.30.1",
     "eslint-config-next": "^15.3.5",
     "eslint-plugin-security": "^3.0.1",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
+    "jest-junit": "^16.0.0",
+    "playwright": "^1.53.2",
+    "supertest": "^7.1.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
