Integrate Codecov and optimize test workflows
- Added Codecov integration to unit tests workflow
  - Uploads coverage reports with 'unit' flag
  - Configured to not fail CI if upload fails
  - Uses CODECOV_TOKEN secret for authentication

- Optimized E2E test execution
  - E2E tests now only run on main branch or PRs to main
  - Reduces CI time and costs for dev branch pushes
  - Unit tests still run on all branches for fast feedback

- Added Codecov configuration (codecov.yml)
  - Target coverage: 60% overall, 70% for new code
  - Ignores test files and generated code
  - Component tracking for API, React components, and libraries
  - Custom comment layout with tree view

- Added concurrency controls to workflows
  - Cancels in-progress runs when new commits are pushed
  - Prevents redundant CI runs and saves resources

Codecov will provide:
- Coverage reports on every PR
- Inline annotations showing uncovered lines
- Coverage trends over time
- Component-level coverage tracking

Next steps:
1. Add CODECOV_TOKEN to GitHub secrets
2. Merge to see coverage baseline
3. Coverage reports will appear on subsequent PRs

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ "main", "dev" ]
 
+# Cancel in-progress runs when a new run is triggered
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   unit-tests:
     name: Unit & Integration Tests
@@ -53,6 +58,15 @@ jobs:
           TURNSTILE_SECRET_KEY: test-turnstile-secret
         run: npm test -- --ci --coverage --maxWorkers=2
 
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage/lcov.info
+          flags: unit
+          name: unit-tests
+          fail_ci_if_error: false
+
       - name: Upload coverage reports
         uses: actions/upload-artifact@v4
         if: always()
@@ -80,6 +94,8 @@ jobs:
   e2e-tests:
     name: E2E Tests
     runs-on: ubuntu-latest
+    # Only run E2E tests on main branch or PRs to main
+    if: github.ref == 'refs/heads/main' || (github.event_name == 'pull_request' && github.base_ref == 'main')
     
     services:
       postgres:
