--- a/.github/workflows/build-check.yml
+++ b/.github/workflows/build-check.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ "main", "dev" ]
 
+# Cancel in-progress runs when a new run is triggered
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     name: Build and Type Check
