--- a/.github/workflows/build-check.yml
+++ b/.github/workflows/build-check.yml
@@ -37,7 +37,13 @@ jobs:
           # Provide minimal env vars needed for build
           NEXT_PUBLIC_TURNSTILE_SITE_KEY: ${{ secrets.NEXT_PUBLIC_TURNSTILE_SITE_KEY || 'dummy-key-for-build' }}
           DATABASE_URL: ${{ secrets.DATABASE_URL || 'postgresql://dummy:dummy@localhost/dummy' }}
-          # Add other NEXT_PUBLIC_ vars that might be needed at build time
+          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY || 'dummy-groq-key' }}
+          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY || 'dummy-anthropic-key' }}
+          ELEVENLABS_API_KEY: ${{ secrets.ELEVENLABS_API_KEY || 'dummy-elevenlabs-key' }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET || 'dummy-jwt-secret' }}
+          TURNSTILE_SECRET_KEY: ${{ secrets.TURNSTILE_SECRET_KEY || 'dummy-turnstile-secret' }}
+          # Sentry is optional for builds
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN || '' }}
         run: npm run build
 
       - name: Check for build output
