--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -93,11 +93,12 @@ jobs:
 
       - name: Test Report
         uses: dorny/test-reporter@v1
-        if: always()
+        if: always() && github.event_name == 'pull_request'
         with:
           name: Jest Tests
           path: 'test-results/jest-junit.xml'
           reporter: jest-junit
+          fail-on-error: false
 
   e2e-tests:
     name: E2E Tests
