--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -179,6 +179,8 @@ jobs:
           echo "Database schema created successfully"
 
       - name: Build Next.js app
+        env:
+          PIRSCH_ACCESS_TOKEN: ${{ secrets.PIRSCH_ACCESS_TOKEN || '' }}
         run: npm run build
         
       - name: Run Playwright tests
@@ -189,6 +191,7 @@ jobs:
           NEXT_PUBLIC_TURNSTILE_SITE_KEY: test-site-key
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY || 'test-key' }}
           ELEVENLABS_API_KEY: ${{ secrets.ELEVENLABS_API_KEY || 'test-key' }}
+          PIRSCH_ACCESS_TOKEN: ${{ secrets.PIRSCH_ACCESS_TOKEN || '' }}
           BASE_URL: http://localhost:3000
           FULL_BROWSER_MATRIX: ${{ github.ref == 'refs/heads/main' && 'true' || 'false' }}
           CI: true
