--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/three": "^0.178.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^1.1.1",
+    "@vercel/speed-insights": "^1.2.0",
     "@wavesurfer/react": "^1.0.11",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
