fix: setting vers for Vercel

--- a/.npmrc
+++ b/.npmrc
@@ -3,3 +3,5 @@ strict-peer-deps=false
 fetch-retries=5
 fetch-retry-mintimeout=20000
 fetch-retry-maxtimeout=120000
+node-linker=hoisted
+shamefully-hoist=true
