--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -15,8 +15,8 @@
     "clean": "rm -rf node_modules .expo .turbo"
   },
   "dependencies": {
-    "@survivalpending/core": "workspace:*",
-    "@survivalpending/database": "workspace:*",
+    "@survivalpending/core": "file:../../packages/core",
+    "@survivalpending/database": "file:../../packages/database",
     "expo": "~51.0.0",
     "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.0",
@@ -39,7 +39,7 @@
     "@types/react": "~18.3.18",
     "@types/react-native": "~0.73.0",
     "typescript": "^5.6.3",
-    "@survivalpending/config": "workspace:*",
+    "@survivalpending/config": "file:../../packages/config",
     "jest": "^30.0.0",
     "@testing-library/react-native": "^13.0.0",
     "react-test-renderer": "18.3.1"
