--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prettier": "^3.4.2",
     "typescript": "^5.6.3"
   },
-  "packageManager": "pnpm@9.15.1",
+  "packageManager": "npm@10.2.4",
   "engines": {
     "node": ">=20"
   }
