--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,8 +24,8 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.4",
-    "@survivalpending/config": "workspace:*",
-    "@survivalpending/database": "workspace:*",
+    "@survivalpending/config": "file:../config",
+    "@survivalpending/database": "file:../database",
     "tsup": "^8.3.5",
     "typescript": "^5.6.3"
   },
