--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -16,7 +16,7 @@
     "zod": "^3.25.73"
   },
   "devDependencies": {
-    "@survivalpending/config": "workspace:*",
+    "@survivalpending/config": "file:../config",
     "tsup": "^8.3.5",
     "typescript": "^5.6.3"
   },
