--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -54,7 +54,7 @@
     "vaul": "^1.1.2"
   },
   "devDependencies": {
-    "@survivalpending/config": "workspace:*",
+    "@survivalpending/config": "file:../config",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "react": "^19.0.0",
