--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "installCommand": "pnpm install",
-  "buildCommand": "pnpm build",
+  "installCommand": "npm install",
+  "buildCommand": "npm run build",
   "crons": [
     {
       "path": "/api/cron/sync",
