--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "@survivalpending/config/tsconfig/base.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "incremental": false
   },
   "include": ["index.ts", "prisma/**/*.ts"],
   "exclude": ["node_modules", "dist"]
