--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "turbo": "^2.3.3",
+    "next": "15.3.5",
     "prettier": "^3.4.2",
     "typescript": "^5.6.3"
   },
