--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,7 +38,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^2.30.0",
+    "date-fns-v4": "npm:date-fns@^4.1.0",
     "dotenv": "^17.0.1",
     "embla-carousel-react": "^8.6.0",
     "groq-sdk": "^0.26.0",
