Updated package to move Node up.

--- a/package.json
+++ b/package.json
@@ -27,8 +27,5 @@
     "prettier": "^3.4.2",
     "typescript": "^5.6.3"
   },
-  "packageManager": "npm@10.2.4",
-  "engines": {
-    "node": "20.x"
+  "packageManager": "npm@10.2.4"
   }
-}
