feat: initial mobile integration

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -25,6 +25,10 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "apiUrl": "http://localhost:3000",
+      "env": "development"
     }
   }
 }
