--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -15,34 +15,41 @@
     "clean": "rm -rf node_modules .expo .turbo"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native-stack": "^7.1.0",
+    "@react-navigation/stack": "^7.0.0",
     "@survivalpending/core": "file:../../packages/core",
     "@survivalpending/database": "file:../../packages/database",
+    "axios": "^1.10.0",
     "expo": "~51.0.0",
     "expo-auth-session": "~5.5.2",
+    "expo-av": "~14.0.0",
     "expo-constants": "~16.0.0",
+    "expo-file-system": "^17.0.1",
+    "expo-haptics": "~14.0.0",
     "expo-secure-store": "~13.0.0",
+    "expo-sensors": "~14.0.1",
     "expo-status-bar": "~1.12.0",
     "react": "18.3.1",
-    "react-native": "0.74.0",
-    "@react-navigation/native": "^7.0.0",
-    "@react-navigation/stack": "^7.0.0",
-    "react-native-screens": "~4.1.0",
-    "react-native-safe-area-context": "4.14.0",
-    "react-native-gesture-handler": "~2.20.2",
-    "expo-av": "~14.0.0",
     "react-hook-form": "^7.59.0",
-    "@hookform/resolvers": "^5.1.1",
-    "zod": "^3.25.73"
+    "react-native": "0.74.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-safe-area-context": "4.14.0",
+    "react-native-screens": "~4.1.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
+    "@survivalpending/config": "file:../../packages/config",
+    "@testing-library/react-native": "^13.0.0",
+    "@types/node": "^22.0.0",
     "@types/react": "~18.3.18",
     "@types/react-native": "~0.73.0",
-    "typescript": "^5.6.3",
-    "@survivalpending/config": "file:../../packages/config",
     "jest": "^30.0.0",
-    "@testing-library/react-native": "^13.0.0",
-    "react-test-renderer": "18.3.1"
+    "react-test-renderer": "18.3.1",
+    "typescript": "^5.6.3"
   },
   "jest": {
     "preset": "jest-expo"
