--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "dev": "expo start",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -16,7 +17,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "~1.23.1",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.1.0",
     "@react-navigation/stack": "^7.0.0",
@@ -28,16 +29,16 @@
     "expo-av": "~14.0.0",
     "expo-constants": "~16.0.0",
     "expo-file-system": "^17.0.1",
-    "expo-haptics": "~14.0.0",
+    "expo-haptics": "~13.0.1",
     "expo-secure-store": "~13.0.0",
-    "expo-sensors": "~14.0.1",
+    "expo-sensors": "~13.0.9",
     "expo-status-bar": "~1.12.0",
-    "react": "18.3.1",
+    "react": "18.2.0",
     "react-hook-form": "^7.59.0",
-    "react-native": "0.74.0",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-safe-area-context": "4.14.0",
-    "react-native-screens": "~4.1.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "~3.31.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -45,11 +46,11 @@
     "@survivalpending/config": "file:../../packages/config",
     "@testing-library/react-native": "^13.0.0",
     "@types/node": "^22.0.0",
-    "@types/react": "~18.3.18",
+    "@types/react": "~18.2.79",
     "@types/react-native": "~0.73.0",
-    "jest": "^30.0.0",
-    "react-test-renderer": "18.3.1",
-    "typescript": "^5.6.3"
+    "jest": "^29.4.0",
+    "react-test-renderer": "18.2.0",
+    "typescript": "~5.3.3"
   },
   "jest": {
     "preset": "jest-expo"
