--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "postinstall": "turbo run db:generate"
   },
   "devDependencies": {
-    "turbo": "^2.3.3",
     "next": "15.3.5",
     "prettier": "^3.4.2",
-    "typescript": "^5.6.3"
+    "turbo": "^2.3.3",
+    "typescript": "~5.3.3"
   },
   "packageManager": "npm@10.2.4"
-  }
+}
